--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>A_IOC</module>
         <module>A_IOC</module>
+        <module>B_Annotation</module>
     </modules>
 
     <properties>
@@ -74,6 +75,15 @@
             <version>4.3.7.RELEASE</version>
             <scope>test</scope>
         </dependency>
+
+
+        <!--注解依赖 https://mvnrepository.com/artifact/javax.annotation/javax.annotation-api -->
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 
         <!--德鲁伊线程池依赖-->
         <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
