--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>C_AOP</module>
         <module>D_DataAccess</module>
         <module>E_Affairs</module>
+        <module>F_AllAnotation</module>
     </modules>
 
     <properties>
@@ -203,6 +204,13 @@
             <scope>test</scope>
         </dependency>
         <!--log4j结束-->
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
